--- a/style.css
+++ b/style.css
@@ -18,18 +18,18 @@ body {
   width: 20%;
 }
 
-.slideshow> img {
+.slideshow > img {
   width: 100%;
 }
 
 .facts {
-  height: 200em;
-  padding: 100px 400px;
+  height: 3.1em;
+  padding: 12px 20px;
   margin: 5px 5px;
   cursor: pointer;
   display: inline-block;
   color: #fff;
-  font-size: 100em;
+  font-size: 0.9em;
   border: 1px solid #eee;
   background: #eee;
   border-radius: 4px;
@@ -42,15 +42,32 @@ body {
   -o-transition: all 0.4s linear;
   transition: all 0.4s linear;
 }
+
+.facts:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px,
+    inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+  -khtml-box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px,
+    inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px,
+    inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+  -o-box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px,
+    inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px,
+    inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+}
+
 .main-nav {
   list-style: none;
 }
 
 .container {
+  width: 100%;
+  height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .skill {
