--- a/style.css
+++ b/style.css
@@ -188,24 +188,23 @@ ul {
 
 div#carousel {
   perspective: 1200px;
-  background: #100000;
-  padding-top: 10%;
   font-size: 0;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   overflow: hidden;
 }
 figure#spinner {
   transform-style: preserve-3d;
-  height: 300px;
+  height: 500px;
   transform-origin: 50% 50% -500px;
   transition: 1s;
 }
 figure#spinner img {
-  width: 40%;
-  max-width: 425px;
+  width: 50%;
+  max-width: 375px;
+  max-height: 385px;
   position: absolute;
-  left: 30%;
-  transform-origin: 50% 50% -500px;
+  left: 50%;
+  transform-origin: 60% 60% -500px;
   outline: 1px solid transparent;
 }
 figure#spinner img:nth-child(1) {
