--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@ body {
   display: grid;
 }
 
-.slide {
-  width: 80%;
-  height: 80vh;
-  background: rgb(205, 196, 255);
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  padding: 0 2rem;
+.menu {
+  cursor: pointer;
 }
 
 .facts {
@@ -50,6 +44,7 @@ body {
 
 .main-nav {
   list-style: none;
+  display: block;
 }
 
 .container {
@@ -186,66 +181,58 @@ ul {
     inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
 }
 
-div#carousel {
-  perspective: 1200px;
-  font-size: 0;
-  margin-bottom: 1rem;
-  overflow: hidden;
+img {
+  vertical-align: middle;
 }
-figure#spinner {
-  transform-style: preserve-3d;
-  height: 500px;
-  transform-origin: 50% 50% -500px;
-  transition: 1s;
-}
-figure#spinner img {
-  width: 50%;
-  max-width: 375px;
-  max-height: 385px;
-  position: absolute;
-  left: 50%;
-  transform-origin: 60% 60% -500px;
-  outline: 1px solid transparent;
-}
-figure#spinner img:nth-child(1) {
-  transform: rotateY(0deg);
-}
-figure#spinner img:nth-child(2) {
-  transform: rotateY(-45deg);
-}
-figure#spinner img:nth-child(3) {
-  transform: rotateY(-90deg);
-}
-figure#spinner img:nth-child(4) {
-  transform: rotateY(-135deg);
-}
-figure#spinner img:nth-child(5) {
-  transform: rotateY(-180deg);
-}
-figure#spinner img:nth-child(6) {
-  transform: rotateY(-225deg);
-}
-figure#spinner img:nth-child(7) {
-  transform: rotateY(-270deg);
-}
-figure#spinner img:nth-child(8) {
-  transform: rotateY(-315deg);
-}
-div#carousel ~ span {
-  color: #fff;
-  margin: 5%;
-  display: inline-block;
-  text-decoration: none;
-  font-size: 2rem;
-  transition: 0.6s color;
+/* Slideshow container */
+.slideshow-container {
+  max-width: 35%;
   position: relative;
-  margin-top: -6rem;
-  border-bottom: none;
-  line-height: 0;
+  margin: auto;
 }
-div#carousel ~ span:hover {
-  color: #888;
+/* Next & previous buttons */
+.ss-icon {
   cursor: pointer;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 8px 8px 0;
+  user-select: none;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.ss-icon:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+/* Caption text */
+.text {
+  color: #0a0a0a;
+  font-size: 45px;
+  padding: 8px 12px;
+  bottom: 8px;
+  width: 200%;
+  text-align: left;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 /***********************************************************************
