--- a/style.css
+++ b/style.css
@@ -8,8 +8,18 @@ body {
   cursor: pointer;
 }
 
+#menu-box {
+  width: 150px;
+  height: 50px;
+  background: rgb(175, 16, 16);
+  float: left;
+  z-index: 100;
+  margin: 20px;
+  cursor: pointer;
+}
+
 .facts {
-  height: 3.1em;
+  height: 3.4em;
   padding: 12px 20px;
   margin: 5px 5px;
   cursor: pointer;
@@ -148,9 +158,9 @@ ul {
 }
 
 .button {
-  height: 2em;
+  height: 2.0em;
   padding: 10px 40px;
-  margin: 5px 5px;
+  margin: 40px 50px;
   cursor: pointer;
   display: inline-block;
   color: #fff;
